# dstr-eXcel

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  fileio.cpp  fileio.hpp  main.cpp  utils.cpp
src/impl/: arraystruct.cpp  arraystruct.hpp  base.cpp  base.hpp  linkedlist.cpp  linkedlist.hpp
src/linkedlist/: impl.cpp  impl.hpp
src/types/: center.cpp  center.hpp  date.cpp  date.hpp  subject.cpp  subject.hpp
src/utils/: fileio.hpp  menu.cpp  menu.hpp  utils.cpp  utils.hpp
tools/: build.py  ci-build.py
